--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Awin -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +14,8 @@
     <meta name="keywords" content="vehicle history check, DVLA check, parking ticket appeal, council ticket dispute, UK vehicle report, MOT check, tax status, professional appeal letters" />
     <meta name="author" content="AutoAudit" />
     <meta name="robots" content="index, follow" />
+    <meta name="awinaffiliate" content="Awin">
+
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
